Added sleep as known term

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
         "shell",
         "term",
         "textutils",
-        "keys"
+        "keys",
+        "sleep"
     ],
     "mcs-filesyncer.enabled": true
 }
